# pulse-py

./: .gitignore  .pre-commit-config.yaml  .vcr.yml  LICENSE  Makefile  README.md  openai.yml  pyproject.toml  release.sh  specification.md
.codex/: development.md  dsl_approach.md  notes.md
.github/workflows/: ci.yml  publish.yml
examples/: dsl_api.ipynb  high_level_api.ipynb  low_level_api.ipynb  python.py
pulse/: __init__.py  auth.py  config.py  dsl.py  starters.py  tmp_line.py
pulse/analysis/: analyzer.py  processes.py  results.py
pulse/core/: __init__.py  batching.py  client.py  gzip_client.py  jobs.py
pulse_client/: __init__.py  auth.py  config.py  dsl.py
pulse_client/analysis/: __init__.py  analyzer.py  processes.py  results.py
pulse_client/core/: __init__.py  client.py  exceptions.py  jobs.py  models.py
tests/: __init__.py  test_analysis.py  test_caching.py  test_core_client.py  test_dsl.py  test_dsl_e2e.py  test_e2e.py  test_examples.py  test_imports.py  test_jobs.py  test_results.py  test_starters.py
tests/cassettes/: .gitkeep  test_analyze_sentiment_e2e.yaml  test_analyze_sentiment_fast.yaml  test_cluster_analysis.yaml  test_compare_similarity_e2e.yaml  test_compare_similarity_fast.yaml  test_create_embeddings_e2e.yaml  test_create_embeddings_fast.yaml  test_create_embeddings_job_wait.yaml  test_dsl_end_to_end.yaml  test_dsl_end_to_end_vcr.yaml  test_error_raises.yaml  test_extract_elements_e2e.yaml  test_generate_themes_e2e.yaml  test_generate_themes_fast.yaml  test_high_level_examples_flow.yaml  test_low_level_examples_e2e.yaml  (+6 more)
