 [build-system]
 requires = ["setuptools>=61", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
name = "pulse-sdk"
version = "0.2.0a29"
description = "Idiomatic, type-safe Python client for the Pulse REST API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name="Researchwise AI", email="dev@researchwiseai.com" }
]
requires-python = ">=3.8"
dependencies = [
    "httpx",
    "pydantic>=2.0",
    "numpy",
    "pandas",
    "scikit-learn>=1.4",
    "diskcache",
    "tqdm",
    "typing-extensions",
    "matplotlib",
    "textblob",
    "seaborn"
]

[project.urls]
Repository = "https://github.com/researchwiseai/pulse-py"
Homepage = "https://github.com/researchwiseai/pulse-py#readme"

 [tool.black]
 line-length = 88
 target-version = ['py38']
 include = '\.pyi?$'
 exclude = '''
 /(
   \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
 )/
 '''

 [tool.ruff]
 line-length = 88
 target-version = "py38"
 extend-select = ["E501"]

 [tool.pytest.ini_options]
 minversion = "6.0"
addopts = "-ra -q"
markers = ["vcr: mark the test to use pytest-vcr for HTTP request recording"]
 testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-mock",
    "pytest-vcr",
    "black",
    "nbqa",
    "ruff",
    "pre-commit>=2.9.2",
]
